<resources>
    <string name="app_name">CovidIndia</string>
    <string name="allow_permission">Allow</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="allow_permission_to_use_some_feature">Allow permission to use some features</string>
    <string name="going_out_notiification_message">Going out !! Don\'t forget to wear your mask and follow all the norms of social distancing.</string>
    <string name="back_to_home_notification_message">Back to home !! Don\'t forget to sanitize your hands.</string>
    <string name="is_this_your_home">Is this Your Home Location?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="let_covid19_access_your_location_to_send_you_safety_notifications">Let CovidIndia access your location to send you safety notifications</string>
    <string name="no_internet_message">No Internet Connection.</string>
    <string name="rank">Rank</string>
    <string name="total_cases">Confirmed Cases:</string>
    <string name="recovered_cases">Recovered Cases:</string>
    <string name="active_cases">Active Cases:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="local_notification">Local Notification</string>
</resources>
