<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickListener"
            type="com.demo.covid19_dashboard.dialog.AddressInfoDialogFragment" />

        <variable
            name="address"
            type="String" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        >

       <!-- <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/home_location" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/is_this_your_home"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@{address}"
            android:gravity="center_horizontal"
            tools:text="lkfajffjjlaj lajfdl jlajfl jajdlalfdj lal dfjalsfdjlj" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:padding="@dimen/_8sdp"
                android:visibility="gone"
                android:onClick="@{clickListener::onClick}"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:text="@string/no"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp"
                android:onClick="@{clickListener::onClick}"
                android:textColor="@color/colorAccent"
                android:text="@string/yes"
                />
        </LinearLayout>
    </LinearLayout>
</layout>